--- a/ContactsApp/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactsApp/Storyboards/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
         <!--Root View Controller-->
         <scene sceneID="A6a-OJ-wKj">
             <objects>
-                <tableViewController id="Mtl-Of-j7A" sceneMemberID="viewController">
+                <tableViewController id="Mtl-Of-j7A" customClass="StructPerconListTableViewController" customModule="ContactsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="K0O-an-wu1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
